--- a/src/app/admin/leveringen/add-levering/add-levering.component.html
+++ b/src/app/admin/leveringen/add-levering/add-levering.component.html
@@ -1,1 +1,44 @@
-<p>add-levering works!</p>
+<h1>Voeg levering toe</h1>
+<mat-card id="card">
+    <mat-card-content>
+        <form [formGroup]="addLeveringForm" (ngSubmit)="onSubmit()">
+            <div>
+                <mat-form-field [style.width.px]=700>
+                    <mat-label>Omschrijving</mat-label>
+                    <input matInput type="text" formControlName="omschrijving" />
+                </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field [style.width.px]=700>
+                  <mat-label>Laadkade</mat-label>
+                  <mat-select [(ngModel)]="selectedLaadkade" formControlName="laadkadeID">
+                      <mat-option *ngFor="let laadkade of laadkades" [value]="laadkade.laadkadeID">
+                        {{laadkade.nummer}}
+                      </mat-option>
+                  </mat-select>
+              </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field [style.width.px]=700>
+                <mat-label>Schedule</mat-label>
+                <mat-select [(ngModel)]="selectedSchedule" formControlName="scheduleID">
+                    <mat-option *ngFor="let schedule of schedules" [value]="schedule.scheduleID">
+                      {{schedule.datum}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field [style.width.px]=700>
+              <mat-label>Leverancier</mat-label>
+              <mat-select [(ngModel)]="selectedLeverancier" formControlName="leverancierID">
+                  <mat-option *ngFor="let leverancier of leveranciers" [value]="leverancier.leverancierID">
+                    {{leverancier.code}}
+                  </mat-option>
+              </mat-select>
+          </mat-form-field>
+      </div>
+            <button class="button" mat-raised-button color="primary" type="submit">Voeg leverancier toe</button>
+        </form>
+    </mat-card-content>
+</mat-card>
