--- a/src/app/admin/leveringen/edit-levering/edit-levering.component.html
+++ b/src/app/admin/leveringen/edit-levering/edit-levering.component.html
@@ -1,38 +1,44 @@
-<!-- <h1>Bewerk levering {{levering.omschrijving}}</h1>
+<h1>Bewerk levering {{levering.omschrijving}}</h1>
 <mat-card id="card">
-    <mat-card-content>
-        <form [formGroup]="editLeveringForm" (ngSubmit)="onSubmit()">
-            <div>
-                <mat-form-field [style.width.px]=700>
-                    <mat-label>Omschrijving</mat-label>
-                    <input matInput type="text" formControlName="omschrijving" [(ngModel)]="levering.omschrijving"/>
-                </mat-form-field>
-            </div>
-            <div>
-                <mat-form-field [style.width.px]=700>
-                    <mat-label>Laadkade</mat-label>
-                    <input matInput type="text" formControlName="laadkade" [(ngModel)]="levering.laadkade.nummer"/>
-                </mat-form-field>
-            </div>
-            <div>
-                <mat-form-field [style.width.px]=700>
-                    <mat-label>Schedule</mat-label>
-                    <input matInput type="text" formControlName="schedule" [(ngModel)]="levering.schedule.datum"/>
-                </mat-form-field>
-            </div>
-            <div>
-                <mat-form-field [style.width.px]=700>
-                    <mat-label>Leverancier</mat-label>
-                    <input matInput type="text" formControlName="leverancier" [(ngModel)]="levering.leverancier.code"/>
-                </mat-form-field>
-            </div>
-            <div>
-                <mat-form-field [style.width.px]=700>
-                    <mat-label>Bedrijf</mat-label>
-                    <input matInput type="text" formControlName="bedrijf" [(ngModel)]="levering.leverancier.bedrijf.naam"/>
-                </mat-form-field>
-            </div>
-            <button class="button" mat-raised-button color="primary" type="submit">Bewerk levering</button>
-        </form>
-    </mat-card-content>
-</mat-card> -->
+  <mat-card-content>
+    <form [formGroup]="editLeveringForm" (ngSubmit)="onSubmit()">
+      <div>
+        <mat-form-field [style.width.px]=700>
+          <mat-label>Omschrijving</mat-label>
+          <input matInput type="text" formControlName="omschrijving" [(ngModel)]="levering.omschrijving" />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field [style.width.px]=700>
+          <mat-label>Laadkade</mat-label>
+          <mat-select [(ngModel)]="levering.laadkadeID" formControlName="laadkadeID">
+            <mat-option *ngFor="let laadkade of laadkades" [value]="laadkade.laadkadeID">
+              {{laadkade.nummer}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field [style.width.px]=700>
+          <mat-label>Schedule</mat-label>
+          <mat-select [(ngModel)]="levering.scheduleID" formControlName="scheduleID">
+            <mat-option *ngFor="let schedule of schedules" [value]="schedule.scheduleID">
+              {{schedule.datum}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field [style.width.px]=700>
+          <mat-label>Leverancier</mat-label>
+          <mat-select [(ngModel)]="levering.leverancierID" formControlName="leverancierID">
+            <mat-option *ngFor="let leverancier of leveranciers" [value]="leverancier.leverancierID">
+              {{leverancier.code}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <button class="button" mat-raised-button color="primary" type="submit">Bewerk levering</button>
+    </form>
+  </mat-card-content>
+</mat-card>
