--- a/src/app/admin/role/rollen/rollen.component.html
+++ b/src/app/admin/role/rollen/rollen.component.html
@@ -1,4 +1,4 @@
-<h1>Bedrijven</h1>
+<h1>Rollen</h1>
 <div class="tableField">
   <mat-card id="card">
     <mat-form-field>
@@ -6,7 +6,7 @@
       <input matInput (keyup)="applyFilter($event)" placeholder="Bedrijf" #input>
     </mat-form-field>
 
-    <div><button class="addButton" (click)="addBedrijf()" mat-raised-button color="accent">VOEG TOE</button></div>
+    <div><button class="addButton" (click)="addRol()" mat-raised-button color="accent">VOEG TOE</button></div>
 
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource" matSort>
@@ -17,12 +17,12 @@
           <td mat-cell *matCellDef="let row"> {{row.naam}} </td>
         </ng-container>
 
-        <!-- Delete bedrijf Column -->
-        <ng-container matColumnDef="deleteBedrijf">
+        <!-- Delete rol Column -->
+        <ng-container matColumnDef="deleteRol">
           <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-          <td mat-cell *matCellDef="let row"> <button (click)="editBedrijf(row.bedrijfID)" class="EditButton" mat-raised-button
+          <td mat-cell *matCellDef="let row"> <button (click)="editRol(row.roleID)" class="EditButton" mat-raised-button
               color="primary">BEWERK</button>
-              <button (click)="deleteBedrijf(row.bedrijfID)" mat-raised-button
+              <button (click)="deleteRol(row.roleID)" mat-raised-button
               color="accent">VERWIJDER</button> </td>
         </ng-container>
 
@@ -31,7 +31,7 @@
 
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">Geen bedrijven gevonden met de filter "{{input.value}}"</td>
+          <td class="mat-cell" colspan="4">Geen rollen gevonden met de filter "{{input.value}}"</td>
         </tr>
       </table>
 
