--- a/src/app/user/table/table.component.html
+++ b/src/app/user/table/table.component.html
@@ -1,4 +1,10 @@
 <div class="col-8">
+    <div id="filter" class="qvplaceholder"></div>
+    <div id="vooruitgang" class="qvplaceholder"></div>
+    <div id="lkstatus" class="qvplaceholder"></div>
+    <div id="lkbedrijf" class="qvplaceholder"></div>
     <div id="infobedrijf" class="qvplaceholder"></div>
+    <div id="producten" class="qvplaceholder"></div>
+    <div id="actievelk" class="qvplaceholder"></div>
 </div>
-<p>beepboopbaap</p>
+<div><button id="ClearAll" class="buttonstyle">Clear All</button></div>
