--- a/src/app/user/table/table.component.html
+++ b/src/app/user/table/table.component.html
@@ -1,4 +1,5 @@
 <div class="col-8">
+    <div id="reload" class="qvplaceholder"></div>
     <div id="filter" class="qvplaceholder"></div>
     <div id="vooruitgang" class="qvplaceholder"></div>
     <div id="lkstatus" class="qvplaceholder"></div>
@@ -8,3 +9,4 @@
     <div id="actievelk" class="qvplaceholder"></div>
 </div>
 <div><button id="ClearAll" class="buttonstyle">Clear All</button></div>
+
