--- a/src/app/admin/schedules/schedules/schedules.component.scss
+++ b/src/app/admin/schedules/schedules/schedules.component.scss
@@ -106,21 +106,12 @@ tr.example-element-row:not(.example-expanded-row):active {
 
 .example-element-detail {
   overflow: hidden;
-  display: flex;
-}
-
-.example-element-diagram {
-  min-width: 80px;
-  border: 2px solid black;
-  padding: 8px;
-  font-weight: lighter;
-  margin: 8px 0;
-  height: 104px;
+  display: block;
 }
 
 .example-element-symbol {
   font-weight: bold;
-  font-size: 40px;
+  font-size: 18px;
   line-height: normal;
 }
 
@@ -130,4 +121,12 @@ tr.example-element-row:not(.example-expanded-row):active {
 
 .example-element-description-attribution {
   opacity: 0.5;
+}
+
+#align_end{
+  justify-content: flex-end;
+}
+
+mat-form-field{
+  width: 700px;
 }
