--- a/src/app/user/table/table.component.html
+++ b/src/app/user/table/table.component.html
@@ -1,12 +1,34 @@
-<div class="col-8">
+<div><button id="ClearAll" class="buttonstyle">Clear All</button></div>
+
+
+<mat-grid-list cols="2" rowHeight="2:1">
+    <mat-grid-tile id="reload" class="qvplaceholder gridanders"></mat-grid-tile>
+    <mat-grid-tile id="filter" class="qvplaceholder gridanders"></mat-grid-tile>
+    <mat-grid-tile id="vooruitgang" class="qvplaceholder"></mat-grid-tile>
+    <mat-grid-tile id="lkstatus" class="qvplaceholder"></mat-grid-tile>
+    <mat-grid-tile id="lkbedrijf" class="qvplaceholder"></mat-grid-tile>
+    <mat-grid-tile id="infobedrijf" class="qvplaceholder"></mat-grid-tile>
+    <mat-grid-tile id="producten" class="qvplaceholder"></mat-grid-tile>
+    <mat-grid-tile id="actievelk" class="qvplaceholder"></mat-grid-tile>
+</mat-grid-list>
+
+<!-- <mat-grid-list cols="2" rowHeight="2:1">
+    <mat-grid-tile id="producten" class="qvplaceholder"></mat-grid-tile>
+    <mat-grid-tile id="actievelk" class="qvplaceholder"></mat-grid-tile>
+</mat-grid-list> -->
+
+<!-- <div class="col-8">
     <div id="reload" class="qvplaceholder"></div>
     <div id="filter" class="qvplaceholder"></div>
     <div id="vooruitgang" class="qvplaceholder"></div>
+
     <div id="lkstatus" class="qvplaceholder"></div>
     <div id="lkbedrijf" class="qvplaceholder"></div>
     <div id="infobedrijf" class="qvplaceholder"></div>
+
+
+
+
     <div id="producten" class="qvplaceholder"></div>
     <div id="actievelk" class="qvplaceholder"></div>
-</div>
-<div><button id="ClearAll" class="buttonstyle">Clear All</button></div>
-
+</div> -->
