--- a/src/app/user/table/table.component.scss
+++ b/src/app/user/table/table.component.scss
@@ -7,12 +7,19 @@
 .qvplaceholder, .qvobject {
 	flex: 1 1 auto;
 	height: 300px;
-	min-width: 400px;
+	max-width: 800px;
 	margin: 45px 0 0 45px;
 }
-#lkbedrijf {
-	max-width: 200px;
+mat-grid-tile{
+	padding-top: 0px !important;
 }
+mat-grid-list{
+	padding-bottom: 10px !important;
+}
+
+// #vooruitgang, #lkstatus, #lkbedrijf, #infobedrijf, #filter, #producten, #actievelk{
+// 	min-width: 400px;
+// }
 #popup {
 	background-color: #c3534b;
 	color: #FFFFFF;
