--- a/src/app/admin/schedules/schedules/schedules.component.html
+++ b/src/app/admin/schedules/schedules/schedules.component.html
@@ -47,8 +47,8 @@
         <ng-container matColumnDef="expandedDetail">
           <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
             <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-              <h2>Leveringen voor {{element.datum |date:'dd/MM/yyyy'}} <button (click)="addLevering(element.scheduleID)" mat-raised-button
-                  color="accent">VOEG TOE</button></h2>
+              <h2>Leveringen voor {{element.datum |date:'dd/MM/yyyy'}} <button (click)="addLevering(element.scheduleID)"
+                  mat-raised-button color="accent">VOEG TOE</button></h2>
               <div *ngFor="let levering of leveringen">
                 <mat-card>
                   <div>
@@ -57,8 +57,19 @@
                     <div> Leverancier: {{levering.leverancier.code}} ({{levering.leverancier.bedrijf.naam}}) </div>
                   </div>
                   <div id="align_end">
-                    <button (click)="editLevering(levering.leveringID, levering.scheduleID)" class="EditButton" mat-raised-button color="primary">BEWERK</button>
-                    <button (click)="deleteLevering(levering.leveringID)" mat-raised-button color="accent">VERWIJDER</button>
+                    <button (click)="editLevering(levering.leveringID, levering.scheduleID)" class="EditButton"
+                      mat-raised-button color="primary">BEWERK</button>
+                    <button (click)="deleteLevering(levering.leveringID)" mat-raised-button
+                      color="accent">VERWIJDER</button>
+                    <button (click)="viewProducts(levering.leveringID)" mat-raised-button color="tertiary">BEKIJK
+                      PRODUCTEN</button>
+                  </div>
+                  <div *ngIf="producten != null">
+                    <mat-card *ngFor="let product of producten">
+                      <div>
+                        <div>{{product.naam}}</div>
+                      </div>
+                    </mat-card>
                   </div>
                 </mat-card>
               </div>
