--- a/src/app/admin/bedrijven/bedrijven/bedrijven.component.html
+++ b/src/app/admin/bedrijven/bedrijven/bedrijven.component.html
@@ -26,7 +26,7 @@
               color="accent">VERWIJDER</button> </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns" id="tableHeader"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
         <!-- Row shown when there is no matching data. -->
