--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -1,1 +1,38 @@
-<p>home works!</p>
+<mat-grid-list cols="2" rowHeight="500px" width="2000px;">
+    <mat-grid-tile colspan=2>
+        <img src="assets/logistiek.jpg" alt="header-logistiek">  
+    </mat-grid-tile>
+    <mat-grid-tile >
+        <mat-card id="card">
+            <mat-card-title>Onze richtlijnen</mat-card-title>
+            <mat-card-content>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </mat-card-content>
+            <mat-card-actions>
+                <a href="https://twitter.com/IAbdelmalki"><button mat-button>Twitter</button></a>
+            </mat-card-actions>
+        </mat-card>
+        <mat-card id="card">
+            <mat-card-title>Onze richtlijnen</mat-card-title>
+            <mat-card-content>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </mat-card-content>
+            <mat-card-actions>
+                <a href="https://twitter.com/IAbdelmalki"><button mat-button>Twitter</button></a>
+            </mat-card-actions>
+        </mat-card>
+    </mat-grid-tile>
+    <mat-grid-tile rowspan=2 rowHeight="100%">FORM</mat-grid-tile>
+    <mat-grid-tile>
+        <mat-card id="card">
+            <mat-card-title>Onze richtlijnen</mat-card-title>
+            <mat-card-content>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </mat-card-content>
+            <mat-card-actions>
+                <a href="https://twitter.com/IAbdelmalki"><button mat-button>Twitter</button></a>
+            </mat-card-actions>
+        </mat-card>
+    </mat-grid-tile>
+</mat-grid-list>
+    <mat-card id=footer width=100%><span>&#169;</span>Linked | 2021<div id="socialmedia"><a id="twitter" href="https://twitter.com/IAbdelmalki">Volg ons op twitter</a></div></mat-card>
