footer en loop weg

--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -7,7 +7,7 @@
             <mat-card-subtitle>Ga naar de beheerspagina voor de bedrijven</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <div><button (click)="toBedrijven()" mat-raised-button color="accent">Bedrijven</button></div>
+            <div class="btncenter"><button (click)="toBedrijven()" mat-raised-button color="accent">Bedrijven</button></div>
         </mat-card-actions>
     </mat-card>
     <mat-card class="navCard">
@@ -16,7 +16,7 @@
             <mat-card-subtitle>Ga naar de beheerspagina voor de laadkades</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <div><button (click)="toLaadkades()" mat-raised-button color="accent">Laadkades</button></div>
+            <div class="btncenter"><button (click)="toLaadkades()" mat-raised-button color="accent">Laadkades</button></div>
         </mat-card-actions>
     </mat-card>
     <mat-card class="navCard">
@@ -25,7 +25,7 @@
             <mat-card-subtitle>Ga naar de beheerspagina voor de leveranciers</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <div><button (click)="toLeveranciers()" mat-raised-button color="accent">Leveranciers</button></div>
+            <div class="btncenter"><button (click)="toLeveranciers()" mat-raised-button color="accent">Leveranciers</button></div>
         </mat-card-actions>
     </mat-card>
     <mat-card class="navCard">
@@ -34,7 +34,7 @@
             <mat-card-subtitle>Ga naar de beheerspagina voor de leveringen</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <div><button (click)="toLeveringen()" mat-raised-button color="accent">Leveringen</button></div>
+            <div class="btncenter"><button (click)="toLeveringen()" mat-raised-button color="accent">Leveringen</button></div>
         </mat-card-actions>
     </mat-card>
     <mat-card class="navCard">
@@ -43,7 +43,7 @@
             <mat-card-subtitle>Ga naar de beheerspagina voor de producten</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <div><button (click)="toProducten()" mat-raised-button color="accent">Producten</button></div>
+            <div class="btncenter"><button (click)="toProducten()" mat-raised-button color="accent">Producten</button></div>
         </mat-card-actions>
     </mat-card>
     <mat-card class="navCard">
@@ -52,16 +52,16 @@
             <mat-card-subtitle>Ga naar de beheerspagina voor de rollen</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <div><button (click)="toRoles()" mat-raised-button color="accent">Rollen</button></div>
+            <div class="btncenter"><button (click)="toRoles()" mat-raised-button color="accent">Rollen</button></div>
         </mat-card-actions>
     </mat-card>
-    <mat-card class="navCard">
+    <mat-card class="navCard voorlaatste">
         <mat-card-header>
             <mat-card-title>Beheer schedules</mat-card-title>
             <mat-card-subtitle>Ga naar de beheerspagina voor de schedules</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <div><button (click)="toSchedules()" mat-raised-button color="accent">Schedules</button></div>
+            <div class="btncenter"><button (click)="toSchedules()" mat-raised-button color="accent">Schedules</button></div>
         </mat-card-actions>
     </mat-card>
     <mat-card class="navCard">
@@ -70,7 +70,7 @@
             <mat-card-subtitle>Ga naar de beheerspagina voor de gebruikers</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <div><button (click)="toUsers()" mat-raised-button color="accent">Gebruikers</button></div>
+            <div class="btncenter"><button (click)="toUsers()" mat-raised-button color="accent">Gebruikers</button></div>
         </mat-card-actions>
     </mat-card>
 </div>
