--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,8 @@
       </mat-sidenav>
       <mat-sidenav-content>
           <router-outlet></router-outlet>
+          <mat-card id=footer width=100%><span>&#169;</span>Linked | 2021<div id="socialmedia"><a id="twitter" href="https://twitter.com/IAbdelmalki">Volg ons op twitter</a></div></mat-card>
       </mat-sidenav-content>
   </mat-sidenav-container>
 </nav>
+
