--- a/src/app/user/eigen-planning/eigen-planning.component.scss
+++ b/src/app/user/eigen-planning/eigen-planning.component.scss
@@ -10,7 +10,7 @@
 
 .productCard{
   width: 500px;
-  height: 1000px;
+  height: 425px;
   margin: 15px;
 }
 
@@ -18,4 +18,13 @@
   background-color: rgba(132, 160, 245, 0.1);
   margin: 15px 15px 0 0;
   width: 200px;
+}
+
+.example-viewport {
+  height: 500px;
+}
+
+.gridlist{
+  background-color: rgba(220,220,220, 0.3);
+  width: 850px;
 }
