code leveranciers aangepast en code schedule eruit

--- a/src/app/admin/leveringen/edit-levering/edit-levering.component.html
+++ b/src/app/admin/leveringen/edit-levering/edit-levering.component.html
@@ -33,7 +33,7 @@
           <mat-label>Leverancier</mat-label>
           <mat-select [(ngModel)]="levering.leverancierID" formControlName="leverancierID">
             <mat-option *ngFor="let leverancier of leveranciers" [value]="leverancier.leverancierID">
-              {{leverancier.code}}
+              {{leverancier.code}} van bedrijf {{leverancier.bedrijf.naam}}
             </mat-option>
           </mat-select>
         </mat-form-field>
