--- a/src/app/admin/leveringen/leveringen/leveringen.component.html
+++ b/src/app/admin/leveringen/leveringen/leveringen.component.html
@@ -31,7 +31,7 @@
 
         <!-- leverancier Column -->
         <ng-container matColumnDef="leverancier">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Leverancier </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Code Leverancier </th>
             <td mat-cell *matCellDef="let row"> {{row.leverancier.code}} </td>
         </ng-container>
 
