--- a/src/app/planning-admin/planning/planning.component.html
+++ b/src/app/planning-admin/planning/planning.component.html
@@ -29,9 +29,6 @@
               Opgemaakt door: {{schedule.user.naam}}
             </div>
             <div>
-              Code: {{schedule.code}}
-            </div>
-            <div>
               <button mat-raised-button color="primary" (click)="goToDetails(schedule.scheduleID)">Bekijk
                 details</button>
             </div>
@@ -99,12 +96,6 @@
           <mat-card-content>
             <form [formGroup]="addScheduleForm" (ngSubmit)="onSubmit()">
               <div>
-                <mat-form-field [style.width.px]=700>
-                  <mat-label>Code</mat-label>
-                  <input matInput type="text" formControlName="code" />
-                </mat-form-field>
-              </div>
-              <div>
                 <mat-form-field [style.width.px]=700 appearance="fill">
                   <mat-label>Kies een datum</mat-label>
                   <input matInput [matDatepicker]="picker" formControlName="datum">
@@ -145,7 +136,7 @@
                     <mat-label>Leverancier</mat-label>
                     <mat-select formControlName="leverancierID">
                       <mat-option *ngFor="let leverancier of leveranciers" [value]="leverancier.leverancierID">
-                        {{leverancier.code}}
+                        {{leverancier.code}} van bedrijf {{leverancier.bedrijf.naam}}
                       </mat-option>
                     </mat-select>
                   </mat-form-field>
