--- a/src/app/admin/bedrijven/add-bedrijf/add-bedrijf.component.html
+++ b/src/app/admin/bedrijven/add-bedrijf/add-bedrijf.component.html
@@ -1,14 +1,16 @@
 <h1>Voeg bedrijf toe</h1>
 <mat-card id="card">
-    <mat-card-content>
-        <form [formGroup]="addBedrijfForm" (ngSubmit)="onSubmit()">
-            <div>
-                <mat-form-field [style.width.px]=700>
-                    <mat-label>Naam</mat-label>
-                    <input matInput type="text" formControlName="naam" />
-                </mat-form-field>
-            </div>
-            <button class="button" mat-raised-button color="primary" type="submit">Voeg bedrijf toe</button>
-        </form>
-    </mat-card-content>
+  <mat-card-content>
+    <form [formGroup]="addBedrijfForm" (ngSubmit)="onSubmit()">
+      <div>
+        <mat-form-field class="formfield">
+          <mat-label>Naam</mat-label>
+          <input matInput type="text" formControlName="naam" />
+        </mat-form-field>
+        <control-messages [control]="addBedrijfForm.get('naam')" class="errorMessage"></control-messages>
+      </div>
+      <button class="button" mat-raised-button color="primary" type="submit" [disabled]="!addBedrijfForm.valid">Voeg
+        bedrijf toe</button>
+    </form>
+  </mat-card-content>
 </mat-card>
