--- a/src/app/admin/bedrijven/edit-bedrijf/edit-bedrijf.component.html
+++ b/src/app/admin/bedrijven/edit-bedrijf/edit-bedrijf.component.html
@@ -1,14 +1,15 @@
 <h1>Bewerk bedrijf {{bedrijf.naam}}</h1>
 <mat-card id="card">
-    <mat-card-content>
-        <form [formGroup]="editBedrijfForm" (ngSubmit)="onSubmit()">
-            <div>
-                <mat-form-field class="formfield">
-                    <mat-label>Naam</mat-label>
-                    <input matInput type="text" formControlName="naam" [(ngModel)]="bedrijf.naam"/>
-                </mat-form-field>
-            </div>
-            <button class="button" mat-raised-button color="primary" type="submit">Bewerk bedrijf</button>
-        </form>
-    </mat-card-content>
+  <mat-card-content>
+    <form [formGroup]="editBedrijfForm" (ngSubmit)="onSubmit()">
+      <div>
+        <mat-form-field class="formfield">
+          <mat-label>Naam</mat-label>
+          <input matInput type="text" formControlName="naam" [(ngModel)]="bedrijf.naam" />
+        </mat-form-field>
+        <control-messages [control]="editBedrijfForm.get('naam')" class="errorMessage"></control-messages>
+      </div>
+      <button class="button" mat-raised-button color="primary" type="submit" [disabled]="!editBedrijfForm.valid">Bewerk bedrijf</button>
+    </form>
+  </mat-card-content>
 </mat-card>
